# ArtHook

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
examples/arthook/include/arthook/: ArtHook.h  Hooked.h
examples/crypto_hooks/jni/: Android.mk  Application.mk
examples/ssl_bypass/jni/: Android.mk  ssl_bypass.cpp
include/arthook/: ArtHook.h  Hooked.h
src/art/: AccessFlags.h  ArtMethod.cpp  ArtMethod.h  Layout.cpp  Layout.h
src/elf/: ElfResolver.cpp  ElfResolver.h
src/hook/: Deoptimize.cpp  HookBatch.cpp  HookEngine.cpp  HookEngine.h  Hooked.cpp  SelfTest.cpp  SelfTest.h
src/jvm/: ClassLookup.cpp  ClassLookup.h  JavaVM.cpp
src/probe/: Probe.cpp  Probe.h
src/trampoline/: Trampoline.cpp  Trampoline.h  trampoline_arm.S  trampoline_arm64.S  trampoline_x86.S  trampoline_x86_64.S
src/util/: Log.h  Memory.h
tests/: README.md  TESTING.md  settings.gradle.kts
tests/app/: build.gradle.kts
tests/app/src/androidTest/java/com/ak4ne/arthooktest/: ExampleInstrumentedTest.java  HookSuiteTest.java
tests/app/src/main/: AndroidManifest.xml
tests/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test_hooks.cpp
tests/app/src/main/java/com/ak4ne/arthooktest/: MainActivity.java  Targets.java
tests/app/src/main/java/com/ak4ne/arthooktest/testkit/: Assert.java  NativeBridge.java  SkipException.java  TestResult.java  TestRunner.java
tests/app/src/main/java/com/ak4ne/arthooktest/tests/: ArgTests.java  BackupTests.java  ConcurrencyTests.java  DiagnosticTests.java  FailureTests.java  LifecycleTests.java  MethodKindTests.java  ModifierTests.java  PackagePrivateAccessor.java  ResourceTests.java  SslBypassTests.java
tests/app/src/main/res/layout/: activity_main.xml
tests/app/src/main/res/values/: strings.xml  themes.xml
tests/app/src/main/res/values-night/: themes.xml
tests/app/src/test/java/com/ak4ne/arthooktest/: ExampleUnitTest.java
tests/gradle/wrapper/: gradle-wrapper.properties
